openshift/opentsdb-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    component: opentsdb
  name: opentsdb
spec:
  ports:
  - port: 4242
    protocol: TCP
    targetPort: 4242
  selector:
    component: opentsdb
  sessionAffinity: None
  type: ClusterIP
